declare
   old_column_count number;
   new_column_count number;
begin
   select count(*)
     into old_column_count
     from user_tab_columns
    where table_name = 'PROJECTS'
      and column_name = 'CREATED_DATE';

   select count(*)
     into new_column_count
     from user_tab_columns
    where table_name = 'PROJECTS'
      and column_name = 'CREATED_AT';

   if old_column_count > 0 and new_column_count = 0 then
      execute immediate 'alter table projects rename column created_date to created_at';
   end if;
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'USERS';
   if table_count = 0 then
      execute immediate q'[
            create table users (
                login_id varchar2(50) primary key,
                name varchar2(100) not null,
                role varchar2(20) not null,
                active number(1) default 1 not null,
                created_at timestamp default current_timestamp not null,
                updated_at timestamp default current_timestamp not null,
                constraint chk_users_role check (role in ('ADMIN', 'PL', 'DEV', 'TESTER')),
                constraint chk_users_active check (active in (0, 1))
            )
        ]';
   end if;
end;
/
declare
   old_column_count number;
   new_column_count number;
begin
   select count(*)
     into old_column_count
     from user_tab_columns
    where table_name = 'ISSUES'
      and column_name = 'REPORTED_DATE';

   select count(*)
     into new_column_count
     from user_tab_columns
    where table_name = 'ISSUES'
      and column_name = 'REPORTED_AT';

   if old_column_count > 0 and new_column_count = 0 then
      execute immediate 'alter table issues rename column reported_date to reported_at';
   end if;
end;
/
declare
   column_count  number;
   nullable_flag varchar2(1);
begin
   select count(*),
          max(nullable)
     into
      column_count,
      nullable_flag
     from user_tab_columns
    where table_name = 'USERS'
      and column_name = 'NAME';

   if column_count = 0 then
      execute immediate 'alter table users add name varchar2(100)';
      execute immediate 'update users set name = login_id where name is null';
      execute immediate 'alter table users modify name not null';
   elsif nullable_flag = 'Y' then
      execute immediate 'update users set name = login_id where name is null';
      execute immediate 'alter table users modify name not null';
   end if;
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'USER_CREDENTIALS';
   if table_count = 0 then
      execute immediate q'[
            create table user_credentials (
                login_id varchar2(50) primary key,
                password_salt varchar2(64) not null,
                password_hash varchar2(64) not null,
                updated_at timestamp default current_timestamp not null,
                constraint fk_user_credentials_user foreign key (login_id) references users(login_id) on delete cascade,
                constraint chk_user_credentials_hash check (regexp_like(password_hash, '^[0-9a-fA-F]{64}$'))
            )
        ]';
   end if;
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'PROJECTS';
   if table_count = 0 then
      execute immediate q'[
            create table projects (
                id number generated by default as identity primary key,
                name varchar2(100) not null,
                description varchar2(1000),
                managed_by_login_id varchar2(50) not null,
                created_at timestamp default current_timestamp not null,
                updated_at timestamp default current_timestamp not null,
                constraint uk_projects_name unique (name),
                constraint fk_projects_manager foreign key (managed_by_login_id) references users(login_id)
            )
        ]';
   end if;
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'PROJECT_MEMBERS';
   if table_count = 0 then
      execute immediate q'[
            create table project_members (
                project_id number not null,
                user_login_id varchar2(50) not null,
                joined_at timestamp default current_timestamp not null,
                constraint pk_project_members primary key (project_id, user_login_id),
                constraint fk_project_members_project foreign key (project_id) references projects(id),
                constraint fk_project_members_user foreign key (user_login_id) references users(login_id)
            )
        ]';
   end if;
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'ISSUES';
   if table_count = 0 then
      execute immediate q'[
            create table issues (
                id number generated by default as identity primary key,
                project_id number not null,
                issue_id varchar2(80) not null,
                title varchar2(200) not null,
                description varchar2(4000 byte) not null,
                reported_at timestamp default current_timestamp not null,
                priority varchar2(20) default 'MAJOR' not null,
                status varchar2(20) default 'NEW' not null,
                reporter_login_id varchar2(50) not null,
                assignee_login_id varchar2(50),
                verifier_login_id varchar2(50),
                fixer_login_id varchar2(50),
                resolver_login_id varchar2(50),
                updated_at timestamp default current_timestamp not null,
                constraint chk_issues_priority check (priority in ('BLOCKER', 'CRITICAL', 'MAJOR', 'MINOR', 'TRIVIAL')),
                constraint chk_issues_status check (status in ('NEW', 'ASSIGNED', 'FIXED', 'RESOLVED', 'CLOSED', 'REOPENED', 'DELETED')),
                constraint fk_issues_project foreign key (project_id) references projects(id) on delete cascade,
                constraint fk_issues_reporter foreign key (reporter_login_id) references users(login_id),
                constraint fk_issues_assignee foreign key (assignee_login_id) references users(login_id),
                constraint fk_issues_verifier foreign key (verifier_login_id) references users(login_id),
                constraint fk_issues_fixer foreign key (fixer_login_id) references users(login_id),
                constraint fk_issues_resolver foreign key (resolver_login_id) references users(login_id)
            )
        ]';
   end if;
end;
/
declare
   old_column_count number;
   new_column_count number;
begin
   select count(*)
     into old_column_count
     from user_tab_columns
    where table_name = 'COMMENTS'
      and column_name = 'CREATED_DATE';

   select count(*)
     into new_column_count
     from user_tab_columns
    where table_name = 'COMMENTS'
      and column_name = 'CREATED_AT';

   if old_column_count > 0 and new_column_count = 0 then
      execute immediate 'alter table comments rename column created_date to created_at';
   end if;

   select count(*)
     into old_column_count
     from user_tab_columns
    where table_name = 'COMMENTS'
      and column_name = 'UPDATED_DATE';

   select count(*)
     into new_column_count
     from user_tab_columns
    where table_name = 'COMMENTS'
      and column_name = 'UPDATED_AT';

   if old_column_count > 0 and new_column_count = 0 then
      execute immediate 'alter table comments rename column updated_date to updated_at';
   end if;
end;
/
declare
   column_count  number;
   nullable_flag varchar2(1);
begin
   select count(*),
          max(nullable)
     into
      column_count,
      nullable_flag
     from user_tab_columns
    where table_name = 'ISSUES'
      and column_name = 'ISSUE_ID';

   if column_count = 0 then
      execute immediate 'alter table issues add issue_id varchar2(80)';
      execute immediate 'update issues set issue_id = to_char(id) where issue_id is null';
      execute immediate 'alter table issues modify issue_id not null';
   elsif nullable_flag = 'Y' then
      execute immediate 'update issues set issue_id = to_char(id) where issue_id is null';
      execute immediate 'alter table issues modify issue_id not null';
   end if;
end;
/
declare
   constraint_count number;
begin
   select count(*)
     into constraint_count
     from user_constraints
    where table_name = 'ISSUES'
      and constraint_name = 'UK_ISSUES_ISSUE_ID';

   if constraint_count = 0 then
      execute immediate 'alter table issues add constraint uk_issues_issue_id unique (issue_id)';
   end if;
end;
/
declare
   constraint_count number;
   delete_rule      varchar2(20);
begin
   select count(*),
          max(delete_rule)
     into
      constraint_count,
      delete_rule
     from user_constraints
    where table_name = 'ISSUES'
      and constraint_name = 'FK_ISSUES_PROJECT';

   if constraint_count = 0 then
      execute immediate 'alter table issues add constraint fk_issues_project foreign key (project_id) references projects(id) on delete cascade'
      ;
   elsif delete_rule != 'CASCADE' then
      execute immediate 'alter table issues drop constraint fk_issues_project';
      execute immediate 'alter table issues add constraint fk_issues_project foreign key (project_id) references projects(id) on delete cascade'
      ;
   end if;
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'COMMENTS';
   if table_count = 0 then
      execute immediate q'[
            create table comments (
                id number generated by default as identity primary key,
                issue_id number not null,
                writer_login_id varchar2(50) not null,
                content varchar2(1000 byte) not null,
                purpose varchar2(32) default 'GENERAL' not null,
                created_at timestamp default current_timestamp not null,
                updated_at timestamp default current_timestamp not null,
                constraint chk_comments_purpose check (purpose in ('GENERAL', 'STATUS_CHANGE')),
                constraint fk_comments_issue foreign key (issue_id) references issues(id) on delete cascade,
                constraint fk_comments_writer foreign key (writer_login_id) references users(login_id)
            )
        ]';
   end if;
end;
/
declare
   column_count  number;
   nullable_flag varchar2(1);
begin
   select count(*),
          max(nullable)
     into
      column_count,
      nullable_flag
     from user_tab_columns
    where table_name = 'COMMENTS'
      and column_name = 'PURPOSE';

   if column_count = 0 then
      execute immediate q'[alter table comments add purpose varchar2(32) default 'GENERAL' not null]';
   elsif nullable_flag = 'Y' then
      execute immediate q'[update comments set purpose = 'GENERAL' where purpose is null]';
      execute immediate q'[alter table comments modify purpose varchar2(32) default 'GENERAL' not null]';
   end if;
end;
/
declare
   column_count  number;
   nullable_flag varchar2(1);
begin
   select count(*),
          max(nullable)
     into
      column_count,
      nullable_flag
     from user_tab_columns
    where table_name = 'COMMENTS'
      and column_name = 'UPDATED_AT';

   if column_count = 0 then
      execute immediate q'[alter table comments add updated_at timestamp]';
      execute immediate q'[update comments set updated_at = coalesce(created_at, current_timestamp)]';
      execute immediate q'[alter table comments modify updated_at default current_timestamp not null]';
   elsif nullable_flag = 'Y' then
      execute immediate q'[update comments set updated_at = coalesce(updated_at, created_at, current_timestamp)]';
      execute immediate q'[alter table comments modify updated_at default current_timestamp not null]';
   end if;
end;
/
declare
   constraint_count number;
begin
   select count(*)
     into constraint_count
     from user_constraints
   where table_name = 'COMMENTS'
      and constraint_name = 'CHK_COMMENTS_PURPOSE';

   if constraint_count > 0 then
      execute immediate 'alter table comments drop constraint chk_comments_purpose';
   end if;

   execute immediate q'[update comments set purpose = 'STATUS_CHANGE' where purpose = 'STATUS_CHANGE_REASON']';
   execute immediate q'[update comments set purpose = 'GENERAL' where purpose not in ('GENERAL', 'STATUS_CHANGE')]';
   execute immediate q'[alter table comments add constraint chk_comments_purpose check (purpose in ('GENERAL', 'STATUS_CHANGE'))]';
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'ISSUE_HISTORY';
   if table_count = 0 then
      execute immediate q'[
            create table issue_history (
                id number generated by default as identity primary key,
                issue_id number not null,
                changed_by_login_id varchar2(50) not null,
                action_type varchar2(40) not null,
                previous_value varchar2(4000 byte),
                new_value varchar2(4000 byte),
                message varchar2(4000 byte),
                changed_at timestamp default current_timestamp not null,
                constraint chk_issue_history_action check (action_type in (
                    'CREATED',
                    'TITLE_DESCRIPTION_UPDATED',
                    'PRIORITY_CHANGED',
                    'STATUS_CHANGED',
                    'ASSIGNMENT_CHANGED',
                    'DEPENDENCY_CHANGED',
                    'COMMENTED'
                )),
                constraint fk_issue_history_issue foreign key (issue_id) references issues(id) on delete cascade,
                constraint fk_issue_history_changed_by foreign key (changed_by_login_id) references users(login_id)
            )
        ]';
   end if;
end;
/
declare
   old_column_count number;
   new_column_count number;
begin
   select count(*)
     into old_column_count
     from user_tab_columns
    where table_name = 'ISSUE_HISTORY'
      and column_name = 'CHANGED_DATE';

   select count(*)
     into new_column_count
     from user_tab_columns
    where table_name = 'ISSUE_HISTORY'
      and column_name = 'CHANGED_AT';

   if old_column_count > 0 and new_column_count = 0 then
      execute immediate 'alter table issue_history rename column changed_date to changed_at';
   end if;
end;
/
begin
   execute immediate q'[
      update comments c
         set purpose = 'GENERAL'
       where not exists (
         select 1
          from issue_history h
          where h.issue_id = c.issue_id
            and h.action_type = 'STATUS_CHANGED'
            and h.message = c.content
            and (
               (h.previous_value = 'ASSIGNED' and h.new_value = 'FIXED')
               or (h.previous_value = 'FIXED' and h.new_value = 'ASSIGNED')
               or (h.previous_value = 'FIXED' and h.new_value = 'RESOLVED')
               or (h.previous_value = 'RESOLVED' and h.new_value = 'CLOSED')
               or (h.previous_value in ('RESOLVED', 'CLOSED') and h.new_value = 'REOPENED')
            )
      )
   ]';
   execute immediate q'[
      update comments c
         set purpose = 'STATUS_CHANGE'
       where exists (
         select 1
          from issue_history h
          where h.issue_id = c.issue_id
            and h.action_type = 'STATUS_CHANGED'
            and h.message = c.content
            and (
               (h.previous_value = 'ASSIGNED' and h.new_value = 'FIXED')
               or (h.previous_value = 'FIXED' and h.new_value = 'ASSIGNED')
               or (h.previous_value = 'FIXED' and h.new_value = 'RESOLVED')
               or (h.previous_value = 'RESOLVED' and h.new_value = 'CLOSED')
               or (h.previous_value in ('RESOLVED', 'CLOSED') and h.new_value = 'REOPENED')
            )
      )
   ]';
end;
/
declare
   table_count number;
begin
   select count(*)
     into table_count
     from user_tables
    where table_name = 'ISSUE_DEPENDENCIES';
   if table_count = 0 then
      execute immediate q'[
            create table issue_dependencies (
                id number generated by default as identity primary key,
                dependency_id varchar2(128) not null,
                blocking_issue_id number not null,
                blocked_issue_id number not null,
                discovered_at timestamp default current_timestamp not null,
                constraint uk_issue_dependencies_key unique (dependency_id),
                constraint uk_issue_dependencies_pair unique (blocking_issue_id, blocked_issue_id),
                constraint chk_issue_dependencies_not_self check (blocking_issue_id <> blocked_issue_id),
                constraint fk_issue_dependencies_blocking foreign key (blocking_issue_id) references issues(id) on delete cascade,
                constraint fk_issue_dependencies_blocked foreign key (blocked_issue_id) references issues(id) on delete cascade
            )
        ]';
   end if;
end;
/
declare
   old_column_count number;
   new_column_count number;
begin
   select count(*)
     into old_column_count
     from user_tab_columns
    where table_name = 'ISSUE_DEPENDENCIES'
      and column_name = 'DISCOVERED_DATE';

   select count(*)
     into new_column_count
     from user_tab_columns
    where table_name = 'ISSUE_DEPENDENCIES'
      and column_name = 'DISCOVERED_AT';

   if old_column_count > 0 and new_column_count = 0 then
      execute immediate 'alter table issue_dependencies rename column discovered_date to discovered_at';
   end if;
end;
/
declare
   column_count number;
begin
   select count(*)
     into column_count
     from user_tab_columns
    where table_name = 'ISSUE_DEPENDENCIES'
      and column_name = 'DEPENDENCY_ID';

   if column_count = 0 then
      execute immediate 'alter table issue_dependencies add dependency_id varchar2(128)';
      execute immediate q'[
            update issue_dependencies
               set dependency_id = lower(standard_hash(to_char(blocking_issue_id) || ':' || to_char(blocked_issue_id), 'SHA256'))
             where dependency_id is null
        ]';
      execute immediate 'alter table issue_dependencies modify dependency_id not null';
   end if;
end;
/
declare
   constraint_count number;
begin
   select count(*)
     into constraint_count
     from user_constraints
    where table_name = 'ISSUE_DEPENDENCIES'
      and constraint_name = 'UK_ISSUE_DEPENDENCIES_KEY';

   if constraint_count = 0 then
      execute immediate 'alter table issue_dependencies add constraint uk_issue_dependencies_key unique (dependency_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_PROJECT_MEMBERS_USER';
   if index_count = 0 then
      execute immediate 'create index ix_project_members_user on project_members(user_login_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_ISSUES_PROJECT_STATUS';
   if index_count = 0 then
      execute immediate 'create index ix_issues_project_status on issues(project_id, status)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_ISSUES_REPORTER';
   if index_count = 0 then
      execute immediate 'create index ix_issues_reporter on issues(reporter_login_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_ISSUES_ASSIGNEE';
   if index_count = 0 then
      execute immediate 'create index ix_issues_assignee on issues(assignee_login_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_ISSUES_VERIFIER';
   if index_count = 0 then
      execute immediate 'create index ix_issues_verifier on issues(verifier_login_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_COMMENTS_ISSUE';
   if index_count = 0 then
      execute immediate 'create index ix_comments_issue on comments(issue_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_HISTORY_ISSUE_DATE';
   if index_count = 0 then
      execute immediate 'create index ix_history_issue_date on issue_history(issue_id, changed_at)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_HISTORY_STATUS_FIFO';
   if index_count = 0 then
      execute immediate 'create index ix_history_status_fifo on issue_history(action_type, changed_at)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_DEP_BLOCKING';
   if index_count = 0 then
      execute immediate 'create index ix_dep_blocking on issue_dependencies(blocking_issue_id)';
   end if;
end;
/
declare
   index_count number;
begin
   select count(*)
     into index_count
     from user_indexes
    where index_name = 'IX_DEP_BLOCKED';
   if index_count = 0 then
      execute immediate 'create index ix_dep_blocked on issue_dependencies(blocked_issue_id)';
   end if;
end;
/
